wip(theme): working through templates and how they get loaded - using definition/block paradigm

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,5 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'Sand Box Dos'
 theme = ['custom' , 'hugOpenProps']
+[params]
+  subtitle = "Babas Running Ship"
